LPS-78690 Make sure there is a margin between images and text when image aligned in regular portlet view

--- a/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/common_main.scss
+++ b/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/common_main.scss
@@ -75,6 +75,16 @@
 		}
 	}
 
+	.portlet-body {
+		img[style~="float:"][style~="left;"] {
+			margin-right: 24px;
+		}
+
+		img[style~="float:"][style~="right;"] {
+			margin-left: 24px;
+		}
+	}
+
 	.social-bookmarks {
 		.fb-like.fb_iframe_widget span {
 			vertical-align: top !important;
